# devtools-cli

./: .devtools  .gitignore  lefthook.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: automerge-dependabot.yaml  test-build-publish.yaml
devtools_cli/: __init__.py  main.py  models.py  utils.py
devtools_cli/commands/config/: main.py
devtools_cli/commands/info/: main.py
devtools_cli/commands/license/: __init__.py  classes.py  header.py  helpers.py  main.py  models.py
devtools_cli/commands/log/: errors.py  helpers.py  main.py  models.py
devtools_cli/commands/version/: descriptors.py  helpers.py  main.py  models.py
devtools_cli/sub_apps/: print_package_info.py
tests/test_license/: test_comment_symbols.py  test_license_header.py
tests/test_main/: test_check_model_type.py  test_error_printer.py  test_find_local_config_file.py  test_get_data_storage_path.py  test_main_models.py  test_read_file_into_model.py  test_read_local_config_file.py  test_write_local_config_file.py  test_write_model_into_file.py
