[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "devtools-cli"
version = "0.1.0"
description = "A toolbox of cross-language utility scripts for efficient software development."
license = "MIT"
authors = ["Mattias Aabmets <mattias.aabmets@gmail.com>"]
readme = "README.md"
repository = "https://github.com/aabmets/devtools-cli"
keywords = ["toolbox", "cross-language", "utility", "scripts", "software", "development"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: C#",
    "Programming Language :: C++",
    "Programming Language :: PHP",
    "Programming Language :: Ruby",
    "Programming Language :: JavaScript",
    "Programming Language :: Kotlin",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]
packages = [
    { include = "devtools_cli" }
]

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.scripts]
devtools = "devtools_cli.main:app"
